Save Hexo source files before branch reorganization

--- a/source/_posts/HX20241202clash订阅规则扩展.md
+++ b/source/_posts/HX20241202clash订阅规则扩展.md
@@ -1,14 +1,17 @@
 ---
-title: clash verge 订阅扩展规则，防止部分学术网站走代理
-tags: [vpn]
-categories: [technique]
+title: Clash Verge 订阅规则扩展：避免学术网站走代理
+tags:
+  - vpn
+categories:
+  - technique
 poster:
   topic: 标题上方的小字
   headline: 大标题
   caption: 标题下方的小字
   color: 标题颜色
+abbrlink: 32351
 date: 2024-12-02 21:59:09
-description:
+description: 教你如何配置 Clash Verge 订阅扩展规则，防止学术网站、数据库等重要资源走代理，避免访问异常和 IP 限制问题。
 cover:
 banner:
 sticky:
@@ -27,10 +30,10 @@ h1:
 type:
 ---
 在校内访问学术网站是不需要代理的，如果通过代理的话每次都会弹出学校账户验证很麻烦，因此有必要将学术网站的访问设置为直连（即不通过代理）
-![](1.png)
+![__](1.png)
 右键订阅点编辑规则--高级
 
-![](2.png)
+![__](2.png)
 点击高级
 
 将里面的代码替换为下面的代码就好了
