--- a/source/_posts/HX20241224clash全局扩展脚本防止部分网站使用代理访问.md
+++ b/source/_posts/HX20241224clash全局扩展脚本防止部分网站使用代理访问.md
@@ -1,5 +1,5 @@
 ---
-title: clash全局扩展脚本防止部分网站使用代理访问
+title: Clash 全局扩展脚本：智能控制网站代理访问
 tags:
   - vpn
 categories:
@@ -11,7 +11,7 @@ poster:
   color: 标题颜色
 abbrlink: 30775
 date: 2024-12-24 21:13:56
-description:
+description: 使用 Clash 全局扩展脚本智能控制特定网站的代理访问，防止学术资源、银行网站等因走代理而导致的访问限制问题。附完整配置代码。
 cover:
 banner:
 sticky:
